Add Machine Agent to Cpp container